# GuessTheMelody

./: .gitignore  Dockerfile  compose.yaml  manage.py  pyproject.toml
domain/: __init__.py  categories_provider_abc.py  category_abc.py  default_category.py  default_melody.py  default_player.py  exceptions.py  game_state_abc.py  game_states.py  game_states_enum.py  guess_the_melody_game.py  main.py  melody_abc.py  player_abc.py  players_provider_abc.py  state_info_provider_abc.py
domain/dto/: __init__.py  category.py  melody.py  player.py
game_app/: apps.py  config.py  models.py  routing.py  urls.py  utils.py  views.py  yandex_client.py
game_app/domain_wrappers/: __init__.py  categories_provider.py  players_provider.py  state_info_provider.py
game_app/migrations/: 0001_initial.py  0002_alter_gamestate_last_action.py  0003_guessthemelodygame_invite_code_and_more.py  0004_gamestate_game_alter_gamelink_player_and_more.py  0005_alter_gamestate_last_action_alter_gamestate_state.py  0006_alter_gamecategory_game_alter_gamelink_game_and_more.py  0007_alter_gamelink_player_alter_gamestate_last_action.py  0008_remove_gamestate_last_action.py  0009_alter_gamelink_player.py  0010_alter_gamelink_player.py  0011_remove_melody_game_category_category_game_and_more.py  0012_alter_melody_link.py  0013_alter_category_name.py
game_app/ws_consumers/: __init__.py  game_consumer.py
guessthemelody/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
